# cmprss

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  deny.toml  flake.nix  justfile
.config/: cliff.toml  release-plz.toml  typos.toml
.github/workflows/: codeberg-mirror.yml  nix.yml  publish.yml  release-plz.yml  release-publish.yml  rust.yml  security-audit.yml  test-snap-can-build.yml
snap/: snapcraft.yaml
src/: bzip2.rs  gzip.rs  job.rs  main.rs  progress.rs  tar.rs  test_utils.rs  utils.rs  xz.rs  zip.rs  zstd.rs
src/backends/: brotli.rs  bzip2.rs  containers.rs  gzip.rs  lz4.rs  lzma.rs  mod.rs  multi_level.rs  pipeline.rs  rar.rs  sevenz.rs  snappy.rs  stream.rs  tar.rs  xz.rs  zip.rs  zstd.rs
tests/: append.rs  brotli.rs  bzip2.rs  cli.rs  compare.rs  force.rs  gzip.rs  list.rs  lz4.rs  lzma.rs  magic.rs  meta.rs  multi_level.rs  pipeline.rs  rar.rs  sevenz.rs  shortcuts.rs  snappy.rs  tar.rs  xz.rs  zip.rs  zstd.rs
tests/common/: mod.rs
