[package]
name = "cmprss"
version = "0.2.0"
edition = "2024"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "MIT"
description = "A compression multi-tool for the command line."
repository = "https://github.com/arcuru/cmprss"
homepage = "https://github.com/arcuru/cmprss"
categories = ["command-line-utilities", "compression"]

[dependencies]
anyhow = "1"
bzip2 = { version = "0.6", features = ["static"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indicatif = "0.18"
is-terminal = "0.4"
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
zip = "8"
tempfile = "3"
zstd = "0.13"
lz4_flex = "0.13"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
rand = "0.10"

[features]
default = ["interop"]
interop = []
