[package]
name = "cmprss"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
description = "A compression multi-tool for the command line."
repository = "https://github.com/arcuru/cmprss"
homepage = "https://github.com/arcuru/cmprss"
categories = ["command-line-utilities", "compression"]

[dependencies]
anyhow = "1"
brotli = "8"
bzip2 = { version = "0.6", features = ["static"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
flate2 = "1"
indicatif = "0.18"
is-terminal = "0.4"
lz4_flex = "0.13"
sevenz-rust2 = "0.20"
snap = "1"
tar = "0.4"
tempfile = "3"
xz2 = { version = "0.1", features = ["static"] }
zip = "8"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
rand = "0.10"

[features]
default = ["interop"]
interop = []

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
